--- a/scene1.html
+++ b/scene1.html
@@ -18,7 +18,7 @@
 	
   <div>
     <a href="scene2.html">
-		<img border="0" alt="W3Schools" src="scene1s.png" width="1000" height="700">
+		<img border="0"  " src="scene1s.png" width="1000" height="700">
 	</a>
   </div>
 
