--- a/memorygame.html
+++ b/memorygame.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<iframe width="0" height="0" src="http://www.youtube.com/embed/iwKS4b9aUeI&loop=1"></iframe>
+<iframe width="0" height="0" src="http://www.youtube.com/embed/iwKS4b9aUeI?autoplay=1"></iframe>
 	<div>
 	<center>
 		<img class="aligncenter" src="Picture1.png" alt="HTML Letters" width="500" height="200" alt="centered image">
