--- a/memorygame.html
+++ b/memorygame.html
@@ -96,6 +96,7 @@
 			Goh Xin Jie 271587<br>
 			  
 			 <audio controls autostart="true">
+			  <source src="game.ogg" type="audio/ogg">
  			  <source src="game.mp3" type="audio/mpeg">
 			  Your browser does not support the audio element.
 			</audio>
