--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
   <div class="button">
     <a href="scene1.html">START GAME</a>
   </div>
+	<div style="visibility:hidden">
+    		<audio autoplay loop>
+        		<source src="game.mp3">
+    		</audio> 
+	</div>
 </div>
 
 	</body>
