--- a/index.html
+++ b/index.html
@@ -79,12 +79,10 @@
   <div class="button">
     <a href="scene1.html">START GAME</a>
   </div>
-	<div style="visibility:hidden">
-    		<audio autoplay loop>
-        		<source src="game.mp3">
-    		</audio> 
-	</div>
-</div>
+	<audio controls autoplay loop hidden>
+    		<source src="game.mp3" type="audio/mpeg">
+	</audio>
+  </div>
 
 	</body>
 </html>
