--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="button">
     <a href="scene1.html">START GAME</a>
   </div>
-	<audio controls autoplay loop hidden>
+	<audio controls autoplay loop >
     		<source src="game.mp3" type="audio/mpeg">
 	</audio>
   </div>
