--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <a href="scene1.html">START GAME</a>
   </div>
   </div>
-		<audio controls autoplay loop >
+		<audio controls autoplay >
     		<source src="game.mp3" type="audio/mpeg">
 		</audio>
 
