--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 		<audio controls autoplay >
     		<source src="game.mp3" type="audio/mpeg">
 		</audio>
-
+	<div>
+	<iframe src="https://giphy.com/embed/RKpOMEhqVRlfrktsJs" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/RKpOMEhqVRlfrktsJs">via GIPHY</a></p>
+	</div>
 	</body>
 </html>
