--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     		<source src="game.mp3" type="audio/mpeg">
 		</audio>
 	<div>
-	<iframe src="https://giphy.com/embed/RKpOMEhqVRlfrktsJs" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/RKpOMEhqVRlfrktsJs">via GIPHY</a></p>
+		<p>
+		<img class="aligncenter" src="catRainbow.gif" width="800" height="300" ">	
+		</p>
 	</div>
 	</body>
 </html>
