--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     <a href="scene1.html">START GAME</a>
   </div>
   </div>
-		<audio controls autoplay >
+		<audio controls autoplay loop >
     		<source src="game.mp3" type="audio/mpeg">
 		</audio>
 	<div>
 		<p>
-		<img class="aligncenter" src="catRainbow.gif" width="100" height="100" ">	
+		<img class="aligncenter" src="catRainbow.gif" width="200" height="200" ">	
 		</p>
 	</div>
 	</body>
