--- a/memorygame.html
+++ b/memorygame.html
@@ -26,7 +26,7 @@
 				  float: left;
 				  width: 33.33%;
 				  padding: 10px;
-				  height: 330px; /* Should be removed. Only for demonstration */
+				  height: 400px; /* Should be removed. Only for demonstration */
 				}
 
 				/* Clear floats after the columns */
@@ -73,6 +73,7 @@
 				 <a href="https://www.flippity.net/mg.php?k=1kLMCNL8QRjOFuGORSAXWCWJPqEkARtGorGpYx1FWrNQ" class="button">Level 2</a></br>
 				 <a href="https://www.flippity.net/mg.php?k=1SE8j4LEWucY-Li-11N7cRwcvcO4QTZHe5akKgC54IjY" class="button">Level 3</a></br>
 				 <a href="https://www.flippity.net/mg.php?k=1eJ-VJIYc7pFubsRQt8SPweVgyR9FmEFxxRzEnUVzB1Q" class="button">Level 4</a></br>
+				 <a href="https://www.flippity.net/mg.php?k=16u6mILxsZArTznKctAxPtUmRGAb0h9qMD7IXzjBZmw8" class="button">Number Game</a></br>
 			</p>
   		</div>
   		
