--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
 		<audio controls autoplay loop >
     		<source src="game.mp3" type="audio/mpeg">
 		</audio>
+<div>
+<video width="320" height="240" controls>
+  <source src="tutorial-memoryGame.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+</div>
 	<div>
 		<p>
 		<img class="aligncenter" src="catRainbow.gif" width="200" height="200" ">	
