--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</audio>
 <div>
 <video width="320" height="240" controls>
-  <source src="tutorial-memoryGame.mp4" type="video/mp4">
+  <source src="tutorial_MemoryGame.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
