--- a/memorygame.html
+++ b/memorygame.html
@@ -88,10 +88,8 @@
 			
 		<div class="footer">
 			<p>
-				<audio controls autostart="true">
-				  <source src="game.ogg" type="audio/ogg">
-				  <source src="game.mp3" type="audio/mpeg">
-				  Your browser does not support the audio element.
+				<audio controls autoplay loop >
+    				<source src="game.mp3" type="audio/mpeg">
 				</audio>
 			</p>
 		    
